tests/checker/ok/option_with_typed_variant.can
Unit => Program {
    "hello" -> Some -> (
        * None => Unit { "none" -> Print }
        * Some<String> => Unit { "some" -> Print }
    )
}
