tests/checker/fail/wrong_arm_pattern.can
Unit => Program {
    Some(7) -> (
        * None => Unit { "none".print() }
        * Ok<Int> => Unit { "wrong".print() }
    )
}
